--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.6.0",
+    "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.15.2",
     "bower": "^1.7.7",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-postcss": "^6.2.0",
     "gulp-pug": "^3.2.0",
+    "gulp-rev-append": "^0.1.7",
+    "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.0.0",
     "jwt-simple": "^0.5.1",
     "morgan": "^1.7.0",
